# atria_transforms

./: .copilot-docstring-instructions.md  .gitignore  pyproject.toml
scripts/: build_registry.sh  format.sh  lint.sh  test.sh
src/atria_transforms/: __init__.py  build_registry.py
src/atria_transforms/conf/data_transform/: cifar10.yaml  document_instance_mmdet_transform.yaml  document_instance_tokenizer.yaml  image.yaml  tf_composer.yaml  tokenizer_object_sanitizer.yaml
src/atria_transforms/conf/data_transform/document_instance_mmdet_transform/: evaluation.yaml  train.yaml
src/atria_transforms/conf/data_transform/document_instance_tokenizer/: layout_token_classification.yaml  question_answering.yaml  semantic_entity_recognition.yaml  sequence_classification.yaml  token_classification.yaml  visual_question_answering.yaml
src/atria_transforms/conf/data_transform/image/: center_crop.yaml  default.yaml  fixed_aspect_ratio_resize.yaml  normalize.yaml  random_horizontal_flip.yaml  resize.yaml  tensor_gray_to_rgb.yaml  to_tensor.yaml
src/atria_transforms/conf/data_transform/image_instance_tf/: default.yaml
src/atria_transforms/core/: image.py  mmdet.py  sequence.py  tf_composer.py  torchvision.py
src/atria_transforms/data_types/: __init__.py  tokenized_document_instance.py  tokenized_question_answer_pair.py
src/atria_transforms/registry/: __init__.py  module_registry.py  registry_groups.py
tests/: base_imports.py  utilities.py
tests/registry/: conftest.py  test_module_registry.py  utilities.py
